@@ -1,4 +1,10 @@
-spotpython 0.18.1
+spotpython 0.18.2:
+
+- spot.py: 
+    Class Spot has new attribute "verbosity. Can be set via fun_control["verbosity"].
+
+
+spotpython 0.18.1:
 
 - nn_linear_regression.py: 
 train steo uses log as follows:
